<resources>
    <string name="app_name">部落星</string>

    <string name="title_activity_login">登录</string>
    <string name="username">用户名</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="login_btn">登  录</string>
    <string name="buluoxing">部落星</string>
    <string name="phonenumber">手机号码</string>
    <string name="no_account_regist_fast">没有账号?快速注册</string>
    <string name="foget_password">忘记密码?</string>
    <string name="regist">注册</string>
    <string name="code">验证码</string>
    <string name="next_step">下一步</string>
    <string name="get_code">获取验证码</string>
    <string name="phone_password_login">手机密码登录》</string>
    <string name="login_dynamic">验证码登录</string>
    <string name="birthday">出生年月</string>
    <string name="birthday_default">1994-10-01</string>
    <string name="sex">性别</string>
    <string name="man">男</string>
    <string name="girl">女</string>
    <string name="boy">男</string>
    <string name="invit_code_tips">邀请码     （非必填项）</string>
    <string name="i_agree">我同意“服务条款”和“用户隐私权保护以及个人信息利用政策”</string>
    <string name="change_password">修改密码</string>
    <string name="ok">确定</string>
    <string name="new_password">新密码</string>
    <string name="check_password">确认密码</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_center">个人中心</string>

    <string name="beijing">北京</string>
    <string name="meizhuang">美妆</string>
    <string name="sign">签    到</string>
    <string name="gift_center">礼包中心</string>
    <string name="red_bits">红豆</string>
    <string name="money">现金</string>
    <string name="followers">关注</string>
    <string name="fans">粉丝</string>
    <string name="mission_complete">已接任务</string>
    <string name="mission_pubed">已发布任务</string>
    <string name="sys_notification">系统公告</string>
    <string name="invit_friends">邀请好友加入</string>
    <string name="save">保存</string>
    <string name="change_user_icon">修改头像</string>
    <string name="nick_name">昵称</string>
    <string name="images_manager">相册管理</string>
    <string name="accepted">已接受</string>
    <string name="mission_number">条任务</string>
    <string name="complte_time">完成时间</string>
    <string name="mission_type">任务类型：</string>
    <string name="mission_href">任务链接：</string>
    <string name="avg_money">平均金额</string>
    <string name="remian_number">剩余人数</string>
    <string name="manage_kol">网红管理</string>
    <string name="weixin_open_id">微信公众号</string>
    <string name="weibo_id">微博账号</string>
    <string name="weibo_url">微博链接</string>
    <string name="my_description">个人简介</string>
    <string name="buy_bean">购买红豆</string>
    <string name="my_beans">我的红豆</string>
    <string name="recieve">收入：</string>
    <string name="my_out">支出：</string>
    <string name="beans">红豆</string>
    <string name="my_money">我的现金</string>
    <string name="get_money">提现</string>
    <string name="add_money">充值</string>
    <string name="yuan">元</string>
    <string name="hot_kol">热门网红</string>
    <string name="go_detail">查看更多</string>
    <string name="beans_mission">红豆任务</string>
    <string name="money_mission">现金任务</string>
    <string name="make_money">赚钱</string>
    <string name="input_mission_name_type_author_search">输入任务名称、类型、发布者搜索</string>
    <string name="sort_by_time">按时间排序</string>
    <string name="sort_by_price">按单价排序</string>
    <string name="input_kol_name_area_search">输入KOL名称、领域进行搜索</string>
    <string name="awards_beans">奖励红豆</string>
    <string name="do_mission">做任务</string>
    <string name="will_get_rewards">可获得任务报酬：</string>
    <string name="sample_image_in_friends_group">朋友圈点赞示例图片</string>
    <string name="complte">完成</string>
    <string name="complted">完成</string>
    <string name="completed_person">已完成人员列表</string>
    <string name="get_money_now">100红豆抽一次</string>
    <string name="his_wx">TA的微信</string>
    <string name="misson_bean">红豆任务</string>
    <string name="cancel">取   消</string>
    <string name="misson_money">现金任务</string>
    <string name="cancel_true">取消</string>
    <string name="pub_bean_misson">发布红豆任务</string>
    <string name="misson_href">任务链接</string>
    <string name="misson_title">任务标题</string>
    <string name="misson_request">任务要求</string>
    <string name="please_setup">请设置：</string>
    <string name="sum">共</string>
    <string name="every_mission">每个任务</string>
    <string name="people">人</string>
    <string name="mission_deadline">任务时限</string>
    <string name="time_start">开始时间</string>
    <string name="my_mission">发布的任务</string>
    <string name="has_pubed">已发布</string>
    <string name="misson_detail">任务详情</string>
    <string name="mission_rewards">获得任务报酬 ：</string>
    <string name="user_complete_list">已完成人员列表</string>
    <string name="red_package_mission">红包任务</string>
    <string name="can_get">可领</string>
    <string name="person_can_get">人可领</string>
    <string name="age_request">年龄要求</string>
    <string name="sex_request">性别限制</string>
    <string name="to">至</string>
    <string name="no_request">不限</string>
    <string name="area_request">地区范围</string>
    <string name="choose">选择</string>
    <string name="current_area">当前区域</string>
    <string name="hot_city">热门城市</string>
    <string name="more_city">更多城市</string>
    <string name="logout">退出登录</string>
    <string name="awards">奖励</string>
    <string name="beans_per_guy">红豆/人</string>
    <string name="number_of_mission">个任务</string>
    <string name="yuan_per_guy">元/人</string>
    <string name="red_package">红包</string>
    <string name="loading">加载中...</string>
    <string name="his_weibo">TA的微博</string>
    <string name="his_images">TA的相册(%d)</string>
    <string name="cancel_follow">取消关注</string>
    <string name="plus_follow">+ 关注</string>
    <string name="select_area">选择地区</string>
    <string name="yes">确定</string>
    <string name="red_bits_for_money">红豆抽红包</string>
    <string name="request_being_kol">申请成为网红</string>
    <string name="avatar">头像</string>
    <string name="gallary_manage">相册管理</string>
    <string name="area">领域</string>
    <string name="kol_manage">网红档案</string>
    <string name="kol_info_manage">网红档案管理</string>
    <string name="area_maohao">领域：</string>
    <string name="time_end">结束时间</string>
    <string name="select_time">选择时间</string>
    <string name="not_enough">您的账户余额不足</string>
    <string name="account_add">给账号充值</string>
    <string name="setup">设置</string>
    <string name="package_result">抽红包结果</string>
    <string name="look_now">立刻查看</string>
    <string name="follow">关注</string>
    <string name="my_follow">我关注的</string>
    <string name="my_follower">我的粉丝</string>
    <string name="invite_cooper">邀约合作</string>
    <string name="cooper_detail">填写你的合作意向</string>
    <string name="submit">提    交</string>
    <string name="have">已有</string>
    <string name="people_complete">人完成</string>
    <string name="remain">剩余</string>
    <string name="number">个</string>
    <string name="see_detail">查看详情</string>
    <string name="task_sreenshot">任务截图</string>
    <string name="task_screenshot">任务截图</string>
    <string name="report_this_guy">是否确认举报此人？</string>
    <string name="package_center">礼包中心</string>
    <string name="sort">排序</string>
    <string name="mission_detail">任务详情</string>
    <string name="money_to_beans">（红豆对现金比率1:10，充100元送500红豆）</string>
    <string name="pay_method">支付方式</string>
    <string name="pay_yuan">支付%s</string>
    <string name="pay">支付</string>
    <string name="money_add">现金充值</string>
    <string name="current_alipay">当前支持使用支付宝充值</string>
    <string name="howmuch">充值金额</string>
    <string name="bind_wx">绑定微信</string>
    <string name="please_select_get_money_type">请选择提现方式</string>
    <string name="name">姓名</string>
    <string name="get_money_count">提现金额</string>
    <string name="alipay_account">支付宝账号</string>
    <string name="do_get_money">确认提现</string>
    <string name="my_zone">我的空间</string>
    <string name="all_city">全国</string>
    <string name="reset">重置</string>
    <string name="domain_maohao">领域：</string>
    <string name="filter">筛选</string>
    <string name="city_maohao">城市：</string>
    <string name="more_city_jiantou"><![CDATA[更多城市>>]]></string>
    <string name="pub_money_misson">发布现金任务</string>
    <string name="public_wx_href">公众号链接</string>
    <string name="other">其它</string>
    <string name="please_input_mission_url">请输入任务链接</string>
    <string name="please_input_mission_title">请输入任务标题</string>
    <string name="mission_spend">本次任务共计花费</string>
    <string name="rewards">任务奖励</string>
    <string name="mission_title">任务标题</string>
    <string name="hot_mission">热门任务</string>
    <string name="find_more">查看更多</string>
    <string name="money_remain">红包还剩</string>
    <string name="login_direct">直接登录</string>
    <string name="input_mission_name_author_search">输入任务名称,发布者</string>
    <string name="input_kol_name">输入网红名称</string>
    <string name="touch_me_for_beans">点我赚豆</string>
    <string name="touch_me_for_money">点我赚钱</string>
    <string name="mission_request">任务要求：</string>
    <string name="rewards_maohao">任务奖励：</string>
    <string name="mission_progress">任务进度</string>
    <string name="very_mission_can_get">每人可领取红豆</string>
    <string name="please_input_mission_number">请输入可领取人数</string>
    <string name="people_can_get">人可领</string>
    <string name="sign_get_beans">签到领红豆</string>
    <string name="kol_detail">网红档案</string>
    <string name="add_beans">红豆充值</string>
    <string name="money_get">现金提现</string>
    <string name="onlineService">在线客服</string>
    <string name="beans_for_money">红豆抽红包</string>
    <string name="have_get_rewards">已获得报酬</string>
    <string name="other_url">其它链接</string>
    <string name="copy">复制</string>
    <string name="edit">编辑</string>
    <string name="find_kol">找网红</string>
    <string name="sex_limit">性别限制</string>
</resources>
