<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.buluoxing.famous.LoginActivity"
    android:background="#ffffff"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/buluoxing"
        android:textSize="@dimen/px52"
        android:layout_marginTop="@dimen/px288"
        android:textStyle="bold"
        android:textColor="#79e1e9"
        />

    <EditText
        android:id="@+id/phone"
        android:layout_width="@dimen/px867"
        android:layout_height="@dimen/px131"
        android:inputType="phone"
        android:autoText="false"
        android:background="@drawable/radius_rect"
        android:layout_marginTop="@dimen/px171"
        android:layout_gravity="center"
        android:paddingLeft="@dimen/px45"
        android:hint="@string/phonenumber"
        android:textColorHint="#b1b3b6"
        android:textSize="@dimen/px40"
        android:textColor="#000000"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="@dimen/px867"
        android:layout_height="@dimen/px131"
        android:inputType="textPassword"
        android:autoText="false"
        android:background="@drawable/radius_rect"
        android:layout_marginTop="@dimen/px45"
        android:layout_gravity="center"
        android:paddingLeft="@dimen/px45"
        android:hint="@string/password"
        android:textColorHint="#b1b3b6"
        android:textSize="@dimen/px40"
        android:textColor="#000000"
        />

    <Button
        android:id="@+id/go_login"
        android:layout_width="@dimen/px867"
        android:layout_height="@dimen/px131"
        android:layout_marginTop="@dimen/px108"
        android:textSize="@dimen/px46"
        android:textColor="#ffffff"
        android:text="@string/login_btn"
        android:background="@drawable/radius_login"
        android:layout_gravity="center"
        />
    <Button
        android:id="@+id/regist_fast"
        android:layout_width="@dimen/px867"
        android:layout_height="@dimen/px131"
        android:layout_marginTop="@dimen/px20"
        android:textSize="@dimen/px46"
        android:textColor="#ffffff"
        android:text="@string/regist"
        android:background="@drawable/radius_login"
        android:layout_gravity="center"
        />

    <TextView
        android:id="@+id/foget_password"
        android:layout_width="@dimen/px867"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="left"
        android:text="@string/foget_password"
        android:textSize="@dimen/px40"
        android:layout_marginTop="@dimen/px75"
        android:textColor="#b1b3b6"
        />
</LinearLayout>
