<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.buluoxing.famous.kol.KolFilterActivity"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px122"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/px35"
        android:id="@+id/select_area"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/EditorInputReal"
            android:text="@string/city_maohao"
            android:layout_marginLeft="@dimen/px42"
            />

        <TextView
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/EditorInputReal"
            android:text="@string/all_city"
            android:id="@+id/area"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_common"
            android:text="@string/more_city_jiantou"
            android:textSize="@dimen/px40"
            android:id="@+id/select_city"
            android:layout_marginRight="@dimen/px46"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px122"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/domain_maohao"
            android:layout_marginLeft="@dimen/px42"
            style="@style/EditorInputReal"
            android:layout_gravity="center_vertical"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/area_list"
            android:orientation="horizontal"
            />
    </LinearLayout>

    <com.diy.AutoNewLineLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:id="@+id/all_domain_list"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/px141"
            android:background="#4cdae4"
            android:gravity="center"
            android:text="@string/yes"
            android:textColor="#ffffff"
            android:textSize="@dimen/px52"
            android:id="@+id/yes"
            />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/px141"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/reset"
            android:textColor="#777777"
            android:textSize="@dimen/px52"
            android:id="@+id/reset"
            />
    </LinearLayout>
</LinearLayout>
