<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.buluoxing.famous.user.AddBeansActivity"
    android:background="@color/main_bg"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px144"
        android:background="@drawable/title_bar_line">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/buy_bean"
            style="@style/TitleBarText"
            />

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/px143"
            android:layout_height="@dimen/px143"
            android:scaleType="fitXY"
            android:src="@drawable/back" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px140"
        android:orientation="horizontal"
        android:background="@drawable/top_bottom_line"
        android:gravity="center"
        android:layout_marginTop="@dimen/px20"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/remain"
            android:textSize="@dimen/px29"
            android:textColor="#4b4b4b"
            android:paddingTop="@dimen/px59"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#f84e4e"
            android:textSize="@dimen/px63"
            android:id="@+id/remain_number"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/red_bits"
            android:textColor="#4b4b4b"
            android:textSize="@dimen/px63"
            />
    </LinearLayout>
    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/add_money"
    android:textSize="@dimen/px46"
    android:textColor="#4b4b4b"
    android:layout_marginTop="@dimen/px48"
    android:paddingLeft="@dimen/px37"
    />
    <com.diy.AutoNewLineLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/auto_new_line"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/px46"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/px46"
        android:textColor="#c6c6c6"
        android:textSize="@dimen/px35"
        android:text="@string/money_to_beans"
        android:gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/px86"
        android:textColor="#919191"
        android:textSize="@dimen/px35"
        android:text="@string/pay_method"
        android:gravity="center_vertical"
        android:layout_marginLeft="@dimen/px39"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px130"
        android:background="@drawable/pay_ali_bg"
        android:layout_marginTop="1px"
        android:gravity="right"
        android:id="@+id/select_ali"
        >
        <ImageView
            android:layout_width="@dimen/px52"
            android:layout_height="@dimen/px52"
            android:id="@+id/select_status_ali"
            android:layout_gravity="right|center_vertical"
            android:background="@drawable/pay_selected"
            android:layout_marginRight="@dimen/px73"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px115"
        android:background="@drawable/pay_wx_bg"
        android:gravity="right"
        android:id="@+id/select_wx"
        ><ImageView
        android:layout_width="@dimen/px52"
        android:layout_height="@dimen/px52"
        android:id="@+id/select_status_wx"
        android:layout_gravity="right|center_vertical"
        android:background="@drawable/pay_diselect"
        android:layout_marginRight="@dimen/px73"
        /></LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/px141"
        android:background="@color/btn_blue"
        android:textColor="#ffffff"
        android:textSize="@dimen/px46"
        android:gravity="center"
        android:text="@string/pay"
        android:id="@+id/pay"
        />
</LinearLayout>
