<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical"
    tools:context="com.buluoxing.famous.RegistActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px144"
        android:background="@drawable/title_bar_line">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/regist"
            android:textColor="#737373"
            android:textSize="@dimen/px52" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/px143"
            android:layout_height="@dimen/px143"
            android:scaleType="fitXY"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/px43"
            android:textSize="@dimen/px46"
            android:text="@string/login_direct"
            android:textColor="@color/blue_common"
            android:id="@+id/login_direct"
            />
    </RelativeLayout>


    <EditText
        android:id="@+id/phone"
        android:layout_width="@dimen/px867"
        android:layout_height="@dimen/px131"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/px92"
        android:autoText="false"
        android:background="@drawable/radius_rect_white"
        android:hint="@string/phonenumber"
        android:inputType="phone"
        android:paddingLeft="@dimen/px45"
        android:textColorHint="#b1b3b6"
        android:textSize="@dimen/px40"
        android:textColor="#000000"
        android:textCursorDrawable="@null"
        />

    <RelativeLayout
        android:layout_width="@dimen/px867"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:background="#ffffff"
        android:layout_marginTop="@dimen/px40"
        >
        <EditText
            android:id="@+id/code"
            android:layout_width="@dimen/px867"
            android:layout_height="@dimen/px131"
            android:autoText="false"
            android:background="@drawable/radius_rect_white"
            android:hint="@string/code"
            android:inputType="number"
            android:paddingLeft="@dimen/px45"
            android:textColorHint="#b1b3b6"
            android:textSize="@dimen/px40"
            android:textColor="#000000"
            android:textCursorDrawable="@null"
            />

        <Button
            android:id="@+id/get_code"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/px37"
            android:layout_width="@dimen/px282"
            android:layout_height="@dimen/px102"
            android:text="@string/get_code"
            android:gravity="center"
            android:textSize="@dimen/px40"
            android:background="@drawable/radius_rect"
            android:layout_alignParentRight="true"
            android:textColor="#5f5f5f"
            />

    </RelativeLayout>

    <EditText
        android:id="@+id/password1"
        android:layout_width="@dimen/px867"
        android:layout_height="@dimen/px131"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/px40"
        android:autoText="false"
        android:background="@drawable/radius_rect_white"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/px45"
        android:textColorHint="#b1b3b6"
        android:textSize="@dimen/px40"
        android:textColor="#000000"
        android:textCursorDrawable="@null"
        />

    <EditText
        android:id="@+id/password2"
        android:layout_width="@dimen/px867"
        android:layout_height="@dimen/px131"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/px40"
        android:autoText="false"
        android:background="@drawable/radius_rect_white"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/px45"
        android:textColorHint="#b1b3b6"
        android:textSize="@dimen/px40"
        android:textColor="#000000"
        android:textCursorDrawable="@null"
        />

    <Button
        android:id="@+id/next_step"
        android:layout_width="@dimen/px867"
        android:layout_height="@dimen/px131"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/px111"
        android:background="@drawable/radius_login"
        android:text="@string/next_step"
        android:textColor="#ffffff"
        android:textSize="@dimen/px46"
        android:textCursorDrawable="@null"
        />

</LinearLayout>
