<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical"
    tools:context="com.buluoxing.famous.AreaSelectorActivity"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px144"
        android:background="@drawable/title_bar_line">

        <TextView
            style="@style/TitleBarText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/select_area"
            />

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/px143"
            android:layout_height="@dimen/px143"
            android:scaleType="fitXY"
            android:src="@drawable/blue_close"

            />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/px107"
        android:background="#f6f7fb"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/px42"
        android:text="@string/current_area"
        android:textColor="#919191"
        android:textSize="@dimen/px40"
        />

    <LinearLayout
        style="@style/LineHorDeep"/>

    <LinearLayout
        android:id="@+id/select_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:gravity="center_vertical"
        android:orientation="vertical"
        />

    <LinearLayout
        style="@style/LineHorDeep"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/px104"
        android:background="#f6f7fb"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/px42"
        android:text="@string/hot_city"
        android:textColor="#919191"
        android:textSize="@dimen/px40"
        />

    <LinearLayout
        style="@style/LineHorDeep"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <com.diy.AutoNewLineLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:paddingBottom="@dimen/px60"
                android:paddingTop="@dimen/px60"
                android:id="@+id/hot_city_list"
                >
            </com.diy.AutoNewLineLayout>

            <LinearLayout
                style="@style/LineHorDeep"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/px104"
                android:background="#f6f7fb"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/px42"
                android:text="@string/more_city"
                android:textColor="#919191"
                android:textSize="@dimen/px40"
                />

            <LinearLayout
                style="@style/LineHorDeep"/>

            <LinearLayout
                android:id="@+id/province_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                ></LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <Button
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="@dimen/px141"
        android:background="#4cdae4"
        android:gravity="center"
        android:text="@string/yes"
        android:textColor="#ffffff"
        android:textSize="@dimen/px52"
        android:id="@+id/yes"
        />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/px141"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/reset"
            android:textColor="#777777"
            android:textSize="@dimen/px52"
            android:id="@+id/reset"
            />
    </LinearLayout>
</LinearLayout>
